yaml/eck/kibana-traefik-crd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-route
  namespace: elastic-system
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`kibana.ianworks.me`) && PathPrefix(`/`)
    kind: Rule
    services:
      - name: kibana-kb-http
        port: 5601
